# napari-metadata

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: deploy_docs.yml  test_and_deploy.yml
docs/: _toc.yml  conf.py
docs/_templates/: navbar-project.html
examples/: cells-3d.py  cells-mixed-dim.py  hiPSCs-3d-mip.py
src/napari_metadata/: __init__.py  _axes_widget.py  _axis_metadata_widgets.py  _axis_type.py  _axis_units.py  _collapsible_containers.py  _file_metadata_widgets.py  _file_size.py  _horizontal_containers.py  _inheritance_widget.py  _layout_utils.py  _model.py  _protocols.py  _reader.py  _sample_data.py  _space_units.py  _spatial_units_combo_box.py  _time_units.py  _transform_widget.py  _vertical_containers.py  _widget.py  _widget_utils.py  _writer.py  file_size.py  layer_utils.py  napari.yaml  units.py
src/napari_metadata/_tests/: test_file_size.py  test_napari.py  test_reader.py  test_widget.py  test_writer.py
src/napari_metadata/viewer_widgets/: __init__.py  _base.py  _dims.py  _dims_and_units.py  _scale_bar.py  _viewer_metadata.py
src/napari_metadata/widgets/: __init__.py  _axis.py  _axis_components.py  _base.py  _containers.py  _copy_layer_labels_widget.py  _dict_viewer.py  _file.py  _file_components.py  _inheritance.py  _main.py  _protocols.py  _viewer_metadata.py
tests/: conftest.py  test_axis_units.py  test_file_size.py  test_layer_utils.py  test_layout_utils.py  test_model.py  test_napari.py  test_units.py  test_widget.py
tests/viewer_widgets/: conftest.py  test_dims.py  test_dims_and_units.py  test_scale_bar.py  test_scale_bar_coordinator.py  test_scale_bar_visible.py  test_viewer_base.py  test_viewer_metadata.py
tests/widgets/: conftest.py  test_axis.py  test_base.py  test_containers.py  test_file.py  test_inheritance.py  test_main.py
